--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
           --health-timeout 5s
           --health-retries 5s
       redis:
-        images: redis
+        image: redis
         ports: ['6379:6379']
         options: --entrypoint redis-server
 
