--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,11 @@ jobs:
     - name: Install Gems
       run: bundle install --path vendor/bundle --jobs 4 --retry 3
 
+    - name: Install Dependencies
+      run: |
+        command -v bundler || gem install bundler
+        bundle install
+
     - name: Run Tests
       run: |
         bundle exec rake test
