--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,13 +25,9 @@ jobs:
       run: |
         gem install bundler
 
-    - name: Install Gems
-      run: bundle install --path vendor/bundle --jobs 4 --retry 3
+    # - name: Install Gems
+    #   run: bundle install --path vendor/bundle --jobs 4 --retry 3
 
-    - name: Install Dependencies
-      run: |
-        command -v bundler || gem install bundler
-        bundle install
 
     - name: Run Tests
       run: |
