--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,7 @@ jobs:
 
     - name: Install Bundler
       run: |
-        gem install bundler
+        gem install bundler:1.17.3
 
     - name: Install Gems
       run: bundle install --path vendor/bundle --jobs 4 --retry 3
