--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,6 +24,7 @@ jobs:
     - name: Install Bundler
       run: |
         gem install bundler:1.17.3
+        gem install sqlite3:1.4.1
 
     - name: Install Gems
       run: bundle install --path vendor/bundle --jobs 4 --retry 3
