--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,14 +6,13 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+  Hey Raz:
     steps:
     - uses: actions/checkout@v1
     - name: Set up Ruby
       uses: actions/setup-ruby@v1
       with:
         ruby-version: 2.5.5
-    Hey Raz
     - uses: actions/cache@v1
       with:
         path: vendor/bundle
