--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,7 @@
 name: Ruby Test and Deploy
 on: [push]
-jobs:   
+jobs:
+  Hey-Raz:  
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v1
