--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,15 +1,20 @@
-name: CI
+name: CI Test
 
 on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v1
-    - name: Set up Ruby
-      uses: actions/setup-ruby@v1
+    - uses: actions/checkout@v2
       with:
-        ruby-version: 2.5.5
+        fetch-depth: 0
+
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: 2.6.3
+
     - uses: actions/cache@v1
       with:
         path: vendor/bundle
@@ -19,7 +24,7 @@ jobs:
 
     - name: Install Bundler
       run: |
-        gem install bundler:1.17.3
+        gem install bundler
 
     - name: Install Gems
       run: bundle install --path vendor/bundle --jobs 4 --retry 3
