--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,10 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Setup System
+      run: |
+        sudo apt-get install libsqlite3-dev
+
     - name: Set up Ruby
       uses: ruby/setup-ruby@v1
       with:
