--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,4 +37,4 @@ jobs:
       env:
         HEROKU_API_TOKEN: ${{ secrets.HEROKU_API_TOKEN }}
       run: |
-        git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/ci-ga-heroku.git master
+        git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/<ci-ga-heroku>.git master
