refactor ci yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,10 @@ jobs:
       run: |
         bundle exec rake test
 
-    - name: Deploy to Heroku
-      env:
-        HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
+    - name: Add remote origin
       run: |
-        git push https://heroku:$HEROKU_API_TOKEN@git.heroku.com/ci-ga-heroku.git origin/master:master
+        git remote add heroku https://heroku:${{ secrets.HEROKU_API_KEY }}@git.heroku.com/ci-ga-heroku.git
+
+    - name: Deploy to Heroku
+      run: |
+        git push heroku HEAD:master -f
