--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,10 @@ jobs:
       with:
         ruby-version: 2.6.3
 
+    - name: Set up SQLite
+        run: |
+          sudo apt-get install libsqlite3-dev
+
     - uses: actions/cache@v1
       with:
         path: vendor/bundle
