--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,12 @@
 name: CI Test
 
-on: push
+on:
+  push:
+    branches:
+      - dev
+  pull_request:
+    branches:
+      - dev
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -37,6 +43,5 @@ jobs:
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
         HEROKU_APP_NAME: "ci-ga-test"
-      if: github.ref == 'refs/heads/dev' && job.status == 'success'
       run: |
         git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git origin/dev
