--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,6 +43,6 @@ jobs:
       env:
         HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
         HEROKU_APP_NAME: "ci-ga-test"
-      if: github.ref == 'refs/heads/dev' && job.status == 'success'
+      if: github.ref == 'refs/heads/master' && job.status == 'success'
       run: |
         git push https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git origin/dev:dev
